--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -55,9 +55,10 @@
   /* nav */
   --nav-background: var(--color-nbnl-light-gray);
   --nav-border-color: var(--color-gray-10);
-  --nav-line-height: 1.35;
+  --nav-line-height: 1.15;
   --nav-heading-font-color: var(--color-jet-30);
-  --nav-heading-font-size: 0.67rem;
+  --nav-heading-font-size: 1rem;
+  --nav-font-size: 0.75rem;
   --nav-muted-color: var(--color-gray-70);
   --nav-panel-divider-color: var(--color-smoke-90);
   /* toolbar */
@@ -122,7 +123,7 @@
   --toc-font-color: var(--nav-muted-color);
   --toc-heading-font-color: var(--doc-font-color);
   --toc-border-color: var(--panel-border-color);
-  --toc-line-height: 1.2;
+  --toc-line-height: 1.15;
   /* footer */
   --footer-line-height: var(--doc-line-height);
   --footer-background: var(--color-smoke-90);
